--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.grey {
+  background: rgb(98, 101, 119);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
