--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -25,9 +25,9 @@
   box-shadow:0em 0 5em white;
 }
 
-.perspective-container {
+/* .perspective-container {
   perspective: 800px;
-}
+} */
 
 /* .card {
   background-size: cover;
@@ -56,7 +56,7 @@
   display: none;
   width: 100%;
   position: absolute;
-  bottom: 50%;
+  bottom: 0;
   color: white;
   /* background-color: rgba(0, 0, 0, 0.5); */
   background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3) );
