--- a/src/components/movie/Movie.css
+++ b/src/components/movie/Movie.css
@@ -5,3 +5,41 @@
 .stars > ul > li {
   margin-right: 5px !important;
 }
+
+#image {
+  border: 3px solid rgb(97, 95, 95);
+  border-radius: 4px;
+}
+
+#movietitle {
+  font-size: 3em;
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 rgb(14, 13, 13),
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+#line {
+  background-color: rgb(112, 110, 110);
+}
+
+#tagline {
+  font-size: 1.6rem;
+  text-shadow: 2px 2px 0px rgb(128, 123, 123);
+}
+
+#overview{
+  font-size: 1.6rem;
+}
+
+.stars{
+  color: red;
+}
