--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,7 +2,6 @@
   border-radius: 0;
   border: 2px solid black;
   color: white;
-  
 }
 
 #search {
@@ -25,11 +24,13 @@
   transition-property: transform;
 }
 
-.movie-card:hover, .movie-card:focus, .movie-card:active {
+.movie-card:hover,
+.movie-card:focus,
+.movie-card:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
   z-index: 10;
-  box-shadow:0em 0 5em white;
+  box-shadow: 0em 0 5em white;
 }
 
 /* .perspective-container {
@@ -58,7 +59,6 @@
   transform: translateX(var(--sheenX)) translateY(var(--sheenY));
 } */
 
-
 .movie-card-title {
   display: none;
   width: 100%;
@@ -66,7 +66,11 @@
   bottom: 0;
   color: white;
   /* background-color: rgba(0, 0, 0, 0.5); */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3) );
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.3)
+  );
   margin-bottom: 0px;
   padding: 5px;
   line-height: 1;
@@ -74,9 +78,7 @@
 
 .movie-card:hover .movie-card-title {
   display: block;
-  
 }
-.body {
+/* .body {
     background-color: grey!important;
-}
-
+} */
