--- a/src/components/movie/Movie.css
+++ b/src/components/movie/Movie.css
@@ -16,7 +16,7 @@
   text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
                0 3px 0 #bbb,
-               0 4px 0 #b9b9b9,
+               0 4px 0 #181717,
                0 5px 0 rgb(14, 13, 13),
                0 6px 1px rgba(0,0,0,.1),
                0 0 5px rgba(0,0,0,.1),
@@ -37,7 +37,7 @@
 }
 
 #overview{
-  font-size: 1.6rem;
+  font-size: 1rem;
 }
 
 .stars{
